wrap fix

--- a/src/components/Body/CodeReviewApp/OneReviewTask/OneReviewTask.css
+++ b/src/components/Body/CodeReviewApp/OneReviewTask/OneReviewTask.css
@@ -73,4 +73,7 @@
     gap: 15px;
     background-color: white;
     border-radius: 7px;
+    padding: 10px;
+    white-space: pre-wrap;
+    /* white-space: pre; */
 }
